fixed scroll and header visibility, download pdf

--- a/src/pages/EstimationPage/EstimationPage.scss
+++ b/src/pages/EstimationPage/EstimationPage.scss
@@ -59,7 +59,7 @@
             border: 0.6px solid base.$color-grey;;
             border-radius: 6px;
             border-top-left-radius: 0px;
-            height: 618px;
+            height: 603px;
             width: 100%;
             background-color: #ffffff;
             position: relative;
